k8s/namespace.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: social-app
  labels:
    name: social-app
