k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: social-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ahmedkhalaf666/social-app-backend:3.1.0
        ports:
        - containerPort: 5000
        args:
        - "-node=$(NODE_ID)"
        - "-port=5000"
        - "-kafka=$(KAFKA_ADDR)"
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m" 
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health 
            port: 5000 
          initialDelaySeconds: 100 
          periodSeconds: 10 
        readinessProbe:        
          httpGet:
            path: /health 
            port: 5000 
          initialDelaySeconds: 60 
          periodSeconds: 5 
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: social-app
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP 
  sessionAffinity: ClientIP 
  sessionAffinityConfig:
    clientIP:
     timeoutSeconds: 10800
