k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: social-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ahmedkhalaf666/social-app-frontend:3.1.0
        ports:
        - containerPort: 80
        resources:
          requests:
           memory: "512Mi" 
           cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: / 
            port: 80 
          initialDelaySeconds: 10
          periodSeconds: 10 
        readinessProbe:        
          httpGet:
            path: / 
            port: 80 
          initialDelaySeconds: 5 
          periodSeconds: 5 

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: social-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
