k8s/kafka-2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-2
  namespace: social-app
spec:
  serviceName: kafka-2-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka-2
  template:
    metadata:
      labels:
        app: kafka-2
    spec:
      containers:
      - name: kafka-2
        image:  apache/kafka:3.7.0
        ports:
        - containerPort: 9094
          name: plaintext
        volumeMounts:
        - name: kafka-2-storage
          mountPath: /var/lib/kafka/data
        resources:
          requests: 
            memory: "512Mi" 
            cpu: "500m" 
          limits: 
            memory: "1Gi" 
            cpu: "1000m" 
        readinessProbe:
          tcpSocket: 
            port : 9094 
          initialDelaySeconds: 30 
          periodSeconds: 10 
          failureThreshold: 3 
        livenessProbe: 
          tcpSocket:
           port: 9094 
          initialDelaySeconds: 60 
          periodSeconds: 20
          failureThreshold: 3 
      volumes:
      - name: kafka-2-storage 
        persistentVolumeClaim: 
          claimName: kafka-2-pvc 

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2-service
  namespace: social-app
spec:
  clusterIP: None
  selector:
    app: kafka-2
  ports:
  - port: 9094
    targetPort: 9094
    name: plaintext 
  publishNotReadyAddresses: true
