k8s/kafka-controller.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-controller
  namespace: social-app
spec:
  serviceName: kafka-controller-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka-controller
  template:
    metadata:
      labels:
        app: kafka-controller
    spec:
      containers:
      - name: kafka-controller
        image:  apache/kafka:3.7.0
        ports:
        - containerPort: 9093
          name: controller
        volumeMounts:
        - name: kafka-controller-storage
          mountPath: /var/lib/kafka/data
        resources:
          requests: 
            memory: "512Mi" 
            cpu: "500m" 
          limits: 
            memory: "1Gi" 
            cpu: "1000m" 
        readinessProbe:
          tcpSocket: 
            port : 9093 
          initialDelaySeconds: 20 
          periodSeconds: 10 
          failureThreshold: 3 
        livenessProbe: 
          tcpSocket:
           port: 9093 
          initialDelaySeconds: 40 
          periodSeconds: 20
          failureThreshold: 3 
      volumes:
      - name: kafka-controller-storage 
        persistentVolumeClaim: 
          claimName: kafka-controller-pvc 

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-controller-service
  namespace: social-app
spec:
  clusterIP: None
  selector:
    app: kafka-controller
  ports:
  - port: 9093
    targetPort: 9093
    name: controller 
  publishNotReadyAddresses: true
