k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: backend-network-policy
  namespace: social-app 
spec: 
  podSelector:
    matchLabels:
      app: backend 
  policyTypes:
  - Ingress 
  - Egress
  ingress: 
  - from: 
    - podSelector:
        matchLabels:
          app: frontend 
    ports: 
    - protocol: TCP 
      port: 5000 
  egress: 
  - to: 
    - podSelector:
        matchLabels: 
          app: mongodb 
    ports: 
    - protocol: TCP
      port: 27017
  - to: 
    - podSelector:
        matchLabels:
          app: redis 
    ports:
    - protocol: TCP 
      port: 6379 
  - to: 
    - podSelector:
        matchLabels:
          app: kafka-1 
    ports:
    - protocol: TCP 
      port: 9092 
  - to: 
    - podSelector:
        matchLabels:
          app: kafka-2 
    ports:
    - protocol: TCP 
      port: 9094 

  - to: 
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 53 
    - protocol: UDP
      port: 53 
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-policy 
  namespace: social-app
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress 
  ingress: 
  - from: 
    - podSelector:
       matchLabels:
        app: backend
    ports: 
    - protocol: TCP 
      port: 27017 

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy 
  namespace: social-app
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress 
  ingress: 
  - from: 
    - podSelector:
       matchLabels:
        app: backend
    ports: 
    - protocol: TCP 
      port: 6379
